# routes/user.routes.js
@@ -1,38 +1,13 @@
 const express = require('express');
-const { auth } = require('../middlewares/auth.middleware');
-const validateRole = require('../middlewares/role.middleware');
+
 const userController = require('../controllers/user.controller');
 
 const router = express.Router();
+// router.use(auth); // Apply authentication to all routes
+// router.use(authorize(['ADMIN', 'MANAGER'])); // Allow both ADMIN and MANAGER roles
 
-router.post('/users', auth, validateRole(['ADMIN']), userController.createUser);
+router.post('/login', userController.loginUser);
 
-router.get(
-  '/users',
-  auth,
-  validateRole(['ADMIN', 'MANAGER']),
-  userController.getUsers
-);
-
-router.get(
-  '/users/:id',
-  auth,
-  validateRole(['ADMIN', 'MANAGER']),
-  userController.getUserById
-);
-
-router.put(
-  '/users/:id',
-  auth,
-  validateRole(['ADMIN']),
-  userController.updateUser
-);
-
-router.delete(
-  '/users/:id',
-  auth,
-  validateRole(['ADMIN']),
-  userController.deleteUser
-);
+router.post('/register', userController.register);
 
 module.exports = router;
